--- a/services/publisher.service
+++ b/services/publisher.service
@@ -1,1 +1,11 @@
+# services/publisher.service
+[Unit]
+Description=MQTT Publisher Service
+
+[Service]
+ExecStart=/usr/bin/python3 /path/to/project/mqtt_publisher.py
+Restart=always
+
+[Install]
+WantedBy=multi-user.target
 
