--- a/services/receiver.service
+++ b/services/receiver.service
@@ -1,10 +1,15 @@
-# services/receiver.service
+
 [Unit]
 Description=GNSS Data Receiver Service
+After=network.target
 
 [Service]
-ExecStart=/usr/bin/python3 /path/to/project/receiver_service.py <receiver_name>
+ExecStart=/usr/bin/python3 /home/kirill/project/receiver_service.py <receiver_name>
 Restart=always
+User=kirill
+WorkingDirectory=/home/kirill/project
 
 [Install]
 WantedBy=multi-user.target
+
+
